--- a/html/index.html
+++ b/html/index.html
@@ -8,8 +8,9 @@
 <body>
     <h1>Welcome to the RAG Demo on Azure</h1>
     <nav>
-        <a href="upload.html">Upload Document</a>
-        <a href="question.html">Ask Questions</a>
+        <p><a href="upload.html">Upload Document</a></p>
+        <p><a href="question.html">Ask Questions</a></p>
+        <p><a href="vanilla.html">Vanilla</a></p>
     </nav>
 </body>
 </html>
