--- a/html/upload.html
+++ b/html/upload.html
@@ -42,7 +42,7 @@
         formData.append('file', file);
 
         try {
-            const response = await fetch('/api/upload', {
+            const response = await fetch('/api/upload_file', {
                 method: 'POST',
                 body: formData,
             });
