--- a/html/upload.html
+++ b/html/upload.html
@@ -11,12 +11,12 @@
 <body>
     <main>
         <h1>Upload File for RAG Demo App</h1>
-        <p>Loading content from the API: <b id="name">...</b></p>
+        <p>Say Hello from API: <b id="name">...</b></p>
         
         <form id="uploadForm">
             <label for="fileInput">Select a file:</label>
             <input type="file" id="fileInput" name="file">
-            <button type="button" id="uploadButton">Upload File</button>
+            <p><button type="button" id="uploadButton">Upload File</button></p>
         </form>
         
         <p id="uploadStatus"></p>
