--- a/html/upload.html
+++ b/html/upload.html
@@ -50,7 +50,7 @@
             if (response.ok) {
                 uploadStatus.textContent = 'File uploaded successfully.';
             } else {
-                uploadStatus.textContent = 'File upload failed.';
+                uploadStatus.textContent = 'File upload failed: Respose.txt = ' + response.text + '  Response.body = ' + response.body;
             }
         } catch (error) {
             uploadStatus.textContent = 'Error: ' + error.message;
