Change endpoint for fetch in question.html

--- a/html/question.html
+++ b/html/question.html
@@ -52,7 +52,7 @@
     <script>
         async function submitQuestion() {
             const question = document.getElementById('visitor_question').value;
-            const response = await fetch('YOUR_API_ENDPOINT', {
+            const response = await fetch('/api/query_db', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
