Modifications to html pages and README.md

--- a/html/index.html
+++ b/html/index.html
@@ -8,10 +8,9 @@
 <body>
     <h1>Welcome to the RAG Demo on Azure</h1>
     <nav>
-        <p><a href="upload.html">Upload Document</a></p>
+        <p><a href="upload.html">Upload Document or Clear Database</a></p>
         <p><a href="clear.html">Upload File or Clear Database</a></p>
         <p><a href="question.html">Ask Questions</a></p>
-        <p><a href="vanilla.html">Vanilla</a></p>
     </nav>
 </body>
 </html>
