--- a/html/index.html
+++ b/html/index.html
@@ -8,8 +8,7 @@
 <body>
     <h1>Welcome to the RAG Demo on Azure</h1>
     <nav>
-        <p><a href="upload.html">Upload Document or Clear Database</a></p>
-        <p><a href="clear.html">Upload File or Clear Database</a></p>
+        <p><a href="upload.html">Upload Document File or Clear Database</a></p>
         <p><a href="question.html">Ask Questions</a></p>
     </nav>
 </body>
