Modify question.html to remove RAG result =

--- a/html/question.html
+++ b/html/question.html
@@ -55,7 +55,7 @@
             });
 
             const data = await response.json();
-            document.getElementById('answer').value = 'RAG result = ' + data.answer;
+            document.getElementById('answer').value = data.answer;
         }
     </script>
 </body>
